--- a/_Imports.razor
+++ b/_Imports.razor
@@ -11,3 +11,8 @@
 @using Sc3S.Shared
 @using Sc3S.Authentication
 @using Blazored.FluentValidation
+@using Sc3S.DTO
+@using Sc3S.Validators
+@using MediatR
+@using Sc3S.Commands
+@using Sc3S.Queries
