--- a/_Imports.razor
+++ b/_Imports.razor
@@ -9,10 +9,11 @@
 @using MudBlazor
 @using Sc3S
 @using Sc3S.Shared
-@using Sc3S.Authentication
+@using Sc3S.Components.Authentication
 @using Blazored.FluentValidation
 @using Sc3S.DTO
 @using Sc3S.Validators
 @using MediatR
-@using Sc3S.Commands
-@using Sc3S.Queries
+@using Sc3S.CQRS.Commands
+@using Sc3S.CQRS.Queries
+@using Sc3S.CQRS.Handlers
