device component update

--- a/Components/LocationComponents/PlantForm.razor
+++ b/Components/LocationComponents/PlantForm.razor
@@ -1,8 +1,8 @@
 ﻿<MudDialog>
     <DialogContent>
         <MudForm @ref="_form">
-            <MudTextField T="string" @bind-Value="_name" Label="Nazwa Zakładu" Required="true" RequiredError="Nazwa zakładu jest wymagana" Counter="60" MaxLength="59" HelperText="Maksymalna długość nazwy" Validation="@(new Func<string, IEnumerable<string>>(MaxNameCharacters))"/>
-            <MudTextField T="string" @bind-Value="_description" Immediate="true" Label="Opis Zakładu" Lines="5" Counter="250" MaxLength="249" HelperText="Maksymalna długość opisu" Validation="@(new Func<string, IEnumerable<string>>(MaxDescriptionCharacters))"/>
+            <MudTextField T="string" @bind-Value="_plantUpdate.Name"  Immediate="true" Label="Nazwa Zakładu" Required="true"/>
+            <MudTextField T="string" @bind-Value="_plantUpdate.Description" Immediate="true" Label="Opis Zakładu"/>
         </MudForm>
     </DialogContent>
     <DialogActions>
