--- a/Components/StuffComponents/DeviceCard.razor
+++ b/Components/StuffComponents/DeviceCard.razor
@@ -1,4 +1,4 @@
-﻿<MudTable Hover="true" Dense="true" RowsPerPage="5" Elevation="10" Items="_devices" Filter="new Func<Device, bool>(Search)">
+﻿<MudTable T="DeviceQuery" Hover="true" Dense="true" RowsPerPage="5" Elevation="10" Items="_devices" Filter="new Func<DeviceQuery, bool>(Search)">
    <ToolBarContent>
     <MudText Typo="Typo.h6">Sprzęty <MudFab OnClick="@(()=>Edit(0))" Color="Color.Success" Icon="@Icons.Material.Filled.Add" IconSize="Size.Small" Size="Size.Small"/></MudText>
     <MudSpacer />
@@ -8,11 +8,16 @@
         <MudTh>Id</MudTh>
         <MudTh><MudTableSortLabel SortBy="new Func<Device, object>(x=>x.Name)" InitialDirection="SortDirection.Ascending">Nazwa</MudTableSortLabel></MudTh>
         <MudTh>Opis</MudTh>
+        <MudTh>Usunięty/Aktywny</MudTh>
+        <MudTh>Ostatnia zmiana</MudTh>
+        <MudTh>Działania</MudTh>
     </HeaderContent>
     <RowTemplate>
         <MudTd DataLabel="Id">@context.DeviceId</MudTd>
         <MudTd DataLabel="Nazwa"><MudText Typo="Typo.h6">@context.Name</MudText></MudTd>
         <MudTd DataLabel="Opis">@context.Description</MudTd>
+        <MudTd DataLabel="Usunięty/Aktywny">@(context.IsDeleted?"Usunięty":"Aktywny")</MudTd>
+        <MudTd>@context.UserId</MudTd>
         <MudTd DataLabel="">
             <MudFab OnClick="@(()=>Edit(context.DeviceId))" Color="Color.Primary" Icon="@Icons.Material.Filled.Edit" IconSize="Size.Small" Size="Size.Small"/>
             <MudFab OnClick="@(()=>MarkDelete(context.DeviceId))" Color="Color.Warning" Icon="@Icons.Material.Filled.Delete" IconSize="Size.Small" Size="Size.Small"/>
