--- a/Components/Authentication/LoginDisplay.razor
+++ b/Components/Authentication/LoginDisplay.razor
@@ -1,4 +1,4 @@
-﻿@inject CustomAuthenticationStateProvider authStateProvider
+﻿@inject AuthStateProvider authStateProvider
 <AuthorizeView>
     <Authorized>
         Witaj, @context.User.Identity?.Name!
