--- a/Components/StuffComponents/DeviceGrid.razor
+++ b/Components/StuffComponents/DeviceGrid.razor
@@ -1,4 +1,4 @@
-﻿<MudDataGrid Dense=true T="DeviceQuery" Items="_devices" Sortable="true" Filterable="true">
+﻿<MudDataGrid Dense=true T="DeviceQuery" Items="_devices" Sortable="true" Filterable="true" QuickFilter="@QuickFilter">
     <ToolBarContent>
         <MudText Typo="Typo.h6">Periodic Elements</MudText>
         <MudSpacer />
