--- a/Pages/AdminDashboard.razor
+++ b/Pages/AdminDashboard.razor
@@ -3,7 +3,7 @@
 
 <MudText Typo="Typo.h5" GutterBottom="true">Panel Admina</MudText>
 <MudTabs Elevation="1" Rounded="true" PanelClass="mt-6" DisableSliderAnimation="true">
-    <MudTabPanel Text="Użytkownicy"></MudTabPanel>
+    <MudTabPanel Text="Użytkownicy"><AccountDisplayGrid/></MudTabPanel>
     <MudTabPanel Text="Nowy">
        
     </MudTabPanel>
