--- a/Components/AdminComponents/AccountDisplayGrid.razor
+++ b/Components/AdminComponents/AccountDisplayGrid.razor
@@ -1,38 +1,40 @@
 ﻿<AuthorizeView Roles="Admin" Context="admin">
-  <MudDataGrid T="AccountDisplayQuery" Items="_accounts" Sortable="true" Filterable="true" QuickFilter="@QuickFilter">
-    <ToolBarContent>
-        <MudText Typo="Typo.h6">Zarządzanie kontami</MudText>
-        <MudSpacer />
-        <MudTextField @bind-Value="_search" Placeholder="Search" Adornment="Adornment.Start" Immediate="true"
-            AdornmentIcon="@Icons.Material.Filled.Search" IconSize="Size.Medium" Class="mt-0"></MudTextField>
-    </ToolBarContent>
-   <Columns>
-  
-        <Column T="AccountDisplayQuery" Field="@nameof(AccountDisplayQuery.UserName)" Title="Nazwa Użytkownika"/>
-        <Column T="AccountDisplayQuery" Field="@nameof(AccountDisplayQuery.Email)" Title="Email"/>
-        <Column T="AccountDisplayQuery" Field="@nameof(AccountDisplayQuery.RoleName)" Title="Rola"/>
-        <Column T="AccountDisplayQuery" Field="@nameof(AccountDisplayQuery.IsDeleted)" Title="Usunięty/Aktywny">
-        <CellTemplate Context="removed">
-            <MudText Color="@(removed.Item.IsDeleted?Color.Error:Color.Success)">@(removed.Item.IsDeleted?"Usunięty":"Aktywny")</MudText>
-        </CellTemplate>
-        </Column>
-        <Column T="AccountDisplayQuery" Field="@nameof(AccountDisplayQuery.CreatedBy)" Title="Autor"/>
-        <Column T="AccountDisplayQuery" Field="@nameof(AccountDisplayQuery.CreatedOn)" Title="Data utworzenia"/>
-        <Column T="AccountDisplayQuery" Field="@nameof(AccountDisplayQuery.UpdatedBy)" Title="Ostatnia aktualizacja"/>
-        <Column T="AccountDisplayQuery" Field="@nameof(AccountDisplayQuery.UpdatedOn)" Title="Data aktualizacji"/>
-        <Column T="AccountDisplayQuery" Title="Działania">
-            <CellTemplate Context="actions">
-                
-                     <MudFab OnClick="@(()=>Edit(admin.User.Identity?.Name!, actions.Item.UserId))" Color="Color.Primary" Icon="@Icons.Material.Filled.Edit" IconSize="Size.Small" Size="Size.Small"/>
-                    @if (admin.User.Identity?.Name != actions.Item.UserName)
+    <MudDataGrid T="AccountDisplayQuery" Items="_accounts" Sortable="true" Filterable="true" QuickFilter="@QuickFilter">
+        <ToolBarContent>
+            <MudText Typo="Typo.h6">Zarządzanie kontami</MudText>
+            <MudSpacer />
+            <MudTextField @bind-Value="_search" Placeholder="Search" Adornment="Adornment.Start" Immediate="true"
+                          AdornmentIcon="@Icons.Material.Filled.Search" IconSize="Size.Medium" Class="mt-0"></MudTextField>
+        </ToolBarContent>
+        <Columns>
+
+            <Column T="AccountDisplayQuery" Field="@nameof(AccountDisplayQuery.UserName)" Title="Nazwa Użytkownika" />
+            <Column T="AccountDisplayQuery" Field="@nameof(AccountDisplayQuery.Email)" Title="Email" />
+            <Column T="AccountDisplayQuery" Field="@nameof(AccountDisplayQuery.RoleName)" Title="Rola" />
+            <Column T="AccountDisplayQuery" Field="@nameof(AccountDisplayQuery.IsDeleted)" Title="Usunięty/Aktywny">
+                <CellTemplate Context="removed">
+                    <MudText Color="@(removed.Item.IsDeleted?Color.Error:Color.Success)">@(removed.Item.IsDeleted?"Usunięty":"Aktywny")</MudText>
+                </CellTemplate>
+            </Column>
+            <Column T="AccountDisplayQuery" Field="@nameof(AccountDisplayQuery.CreatedBy)" Title="Autor" />
+            <Column T="AccountDisplayQuery" Field="@nameof(AccountDisplayQuery.CreatedOn)" Title="Data utworzenia" />
+            <Column T="AccountDisplayQuery" Field="@nameof(AccountDisplayQuery.UpdatedBy)" Title="Ostatnia aktualizacja" />
+            <Column T="AccountDisplayQuery" Field="@nameof(AccountDisplayQuery.UpdatedOn)" Title="Data aktualizacji" />
+            <Column T="AccountDisplayQuery" Field="@nameof(AccountDisplayQuery.Actions)" Title="Działania">
+                <CellTemplate Context="actions">
+                    @if (!Equals(actions.Item.UserName, admin.User.Identity?.Name))
                     {
-                        <MudFab OnClick="@(()=>MarkDelete(admin.User.Identity?.Name!, actions.Item.UserId))" Color="Color.Warning" Icon="@Icons.Material.Filled.Delete" IconSize="Size.Small" Size="Size.Small"/>
-                               
-                   
-                <MudFab OnClick="@(()=>Delete(actions.Item.UserId))" Color="Color.Error" Icon="@Icons.Filled.DeleteForever" IconSize="Size.Small" Size="Size.Small"/>
+                        <MudFab OnClick="@(()=>Edit(admin.User.Identity?.Name!, actions.Item.UserId))" Color="Color.Primary" Icon="@Icons.Material.Filled.Edit" IconSize="Size.Small" Size="Size.Small" />
+                        @if (admin.User.Identity?.Name != actions.Item.UserName)
+                        {
+                            <MudFab OnClick="@(()=>MarkDelete(admin.User.Identity?.Name!, actions.Item.UserId))" Color="Color.Warning" Icon="@Icons.Material.Filled.Delete" IconSize="Size.Small" Size="Size.Small" />
+
+
+                            <MudFab OnClick="@(()=>Delete(actions.Item.UserId))" Color="Color.Error" Icon="@Icons.Filled.DeleteForever" IconSize="Size.Small" Size="Size.Small" />
+                        }
                     }
-            </CellTemplate>
-        </Column>
-   </Columns>
-</MudDataGrid>
+                </CellTemplate>
+            </Column>
+        </Columns>
+    </MudDataGrid>
 </AuthorizeView>
